fix(user.css): fix active lyrics line clipping on right sidebar

--- a/src/user.css
+++ b/src/user.css
@@ -2273,7 +2273,7 @@ option {
 }
 
 /* right sidebar lyrics */
-.hzUuLPdH48AzgQun5NYQ > .lyrics-lyricsContent-lyric {
+.main-nowPlayingView-lyricsContent > .lyrics-lyricsContent-lyric {
   max-width: 90% !important;
 }
 
